# browser-game-ocean

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  plan.md  prompts.tx  run-manual-backend.sh  start.sh  stop.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  actions.py  admin.py  auth.py  cities.py  dev.py  players.py  resources.py  schemas.py
backend/app/core/: base_definitions.py  config.py  database.py  dev_user.py  security.py
backend/app/models/: __init__.py  action.py  city.py  player.py  resource.py
backend/app/services/: action_service.py  city_service.py  grid_utils.py  resource_service.py
backend/app/sockets/: manager.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/game/: AdminPanel.tsx  BottomPanel.tsx  RankingsPanel.tsx  TechTreePanel.tsx  WorldMapPanel.tsx
frontend/src/components/hud/: ConnectionStatus.tsx  ResourceBar.tsx
frontend/src/game/constants/: bases.ts  grid.ts  techTree.ts  worldMap.ts
frontend/src/game/core/: GameCanvas.tsx  ViewportController.ts
frontend/src/game/entities/: Structure.ts  Worker.ts
frontend/src/game/rendering/: SpriteManager.ts
frontend/src/game/systems/: Bubbles.ts  CloudSystem.ts  FogOfWar.ts  ParallaxBackground.ts  SurfaceClouds.ts  SurfaceMountains.ts  WaveSystem.ts
frontend/src/services/: api.ts  socket.ts
frontend/src/stores/: gameStore.ts
frontend/src/types/: game.ts
