[project]
name = "ocean-depths-backend"
version = "0.1.0"
description = "Backend for Ocean Depths underwater city builder MMO"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
